--- a/public/assets/css/user_profile.css
+++ b/public/assets/css/user_profile.css
@@ -86,7 +86,7 @@
     background: transparent;
     display: inline-block;
     padding: 0.5em 0.5em;
-    border-radius: .25em;
+    border-radius: 1em;
     font-weight: bold;
     color: black;
     margin-inline: 0.3em ;
